footer gap fix

--- a/themes/husig/assets/css/main.css
+++ b/themes/husig/assets/css/main.css
@@ -523,7 +523,7 @@ section#footer-section .footer_title {
   line-height: 27px;
   color: #ffffff;
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 24px;
 }
 
 
